# downloader

./: .gitignore  .memo.txt  CHANGELOG.md  Cargo.toml  FIXES.md  OPEN_TASKS.md  README.md  clippy.toml  deny.toml  phase_3_code_review.md  phase_4_code_review.md  phase_4_tests_reflection.md  rustfmt.toml  sleep-audio-refs.bib
.cargo/: audit.toml
.cursor/plans/: fix_download_module_build_errors.plan.md  phase_3_resolution_and_download_orchestrators.plan.md  phase_4_progress_and_queue_managers.plan.md
.github/workflows/: coverage.yml  phase-rollout-gates.yml  stress-sidecar-flaky.yml
_bmad-output/: as-built-architecture.md  automation-summary.md  future-issues.md  nfr-assessment.md  project-context.md
_bmad-output/analysis/: brainstorming-session-2026-01-15.md
_bmad-output/implementation-artifacts/: 1-0-basic-cli-entry-point.md  1-1-project-scaffolding.md  1-2-http-download-core.md  1-3-url-input-detection.md  1-4-sqlite-queue-persistence.md  1-5-concurrent-downloads.md  1-6-retry-with-exponential-backoff.md  1-7-per-domain-rate-limiting.md  10-1-workspace-extraction-tauri-init.md  10-2-basic-download-trigger-ui.md  10-3-progress-display-completion-summary.md  11-1-convert-html-to-pdf-ui.md  2-1-doi-detection-validation.md  2-2-resolver-trait-registry.md  2-3-crossref-doi-resolution.md  2-4-reference-string-parsing.md  2-5-bibliography-extraction.md  2-6-bibtex-format-support.md  2-7-mixed-format-input-handling.md  3-1-input-parsing-feedback.md  3-2-progress-spinner-display.md  3-3-in-place-status-updates.md  3-4-completion-summary.md  3-5-graceful-interrupt-handling.md  3-6-resumable-downloads.md  4-1-auth-required-detection.md  4-2-cookie-file-input.md  4-3-browser-cookie-capture.md  4-4-secure-cookie-storage.md  4-5-sciencedirect-resolver.md  5-1-project-folder-creation.md  5-2-sub-project-organization.md  5-3-metadata-based-file-naming.md  5-4-project-index-generation.md  6-1-download-attempt-logging.md  6-2-failure-logging-with-details.md  6-3-per-project-download-log.md  6-4-history-query-command.md  7-1-stdin-piped-input.md  7-2-dry-run-mode.md  (+33 more)
_bmad-output/planning-artifacts/: agentic-pivot-analysis-2026-04-03.md  architecture.md  audit-10-expert-product-strategy-2026-03-09.md  bmm-workflow-status.yaml  current-state-and-90-day-plan-Downloader-2026-03-09.md  epic-10.md  epic-11.md  epics.md  gtm-acquisition-plan-Downloader-2026-03-09.md  implementation-readiness-report-2026-01-27.md  legal-risk-assessment-Downloader-2026-03-09.md  market-research-academic-tools-2026-04-04.md  prd.md  product-brief-Downloader-2026-01-20.md  product-brief-Downloader-2026-03-08.md  strategic-roadmap-Downloader-2026-03-08.md  test-design-system.md  ui-deferred-backlog-2026-03-10.md  ui-scope-decision.md  ui-ux-strategy-Downloader-2026-03-09.md  ux-design-directions.html  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml  workflow-manifest.csv
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
_product/: README.md  compiled-entities.md
_product/argument-graph-layer/: pain-discovery-report.md  product-brief.md  research-process.md
_product/citation-verifier/: TODO.md  h4-phase0-spec.md  pain-discovery-report.md  product-brief.md  research-process.md
_product/research-wiki-compiler/: h13-phase0-background.md  h13-phase0-spec.md  (+7 more)
docs/: auth-cookie-capture.md  coverage-rollout-plan.md  development.md  effort-log-2026-04-21-registry-dedup-hardening.md  examples.md
downloader-app/: SMOKE_TEST.md  package-lock.json  package.json  vite.config.js  vitest.config.ts
downloader-app/src-tauri/: Cargo.toml  tauri.conf.json
downloader-app/src-tauri/src/: commands.rs  lib.rs  main.rs
downloader-cli/: Cargo.toml
downloader-cli/src/: app_config.rs  cli.rs  main.rs
downloader-cli/src/app/: command_dispatcher.rs  config_runtime.rs  context.rs  download_orchestrator.rs  input_processor.rs  progress_manager.rs  queue_manager.rs  resolution_orchestrator.rs  runtime.rs  terminal.rs
downloader-cli/src/commands/: convert.rs  dry_run.rs  export.rs  log.rs  mod.rs
downloader-cli/src/output/: mod.rs
downloader-cli/src/project/: mod.rs
downloader-cli/src/search/: mod.rs
downloader-cli/tests/: cli_e2e.rs  exit_code_partial_e2e.rs  optimization_refactor_commands.rs
downloader-cli/tests/support/: mod.rs
downloader-core/: Cargo.toml
external_reports/: downloader_app_brief_research.md  downloader_app_deep_research.md
migrations/: 20260128000001_create_queue_table.sql  20260128000002_create_download_log_table.sql  20260215000003_add_resume_columns_to_queue.sql  20260217000008_add_topics_column.sql  20260218000009_add_parse_confidence_columns.sql
src/: cli.rs  db.rs  lib.rs  main.rs  user_agent.rs
test_outputs/: 2501.17739v1.html  7989.html  ai-testing-tools.html  automation-testing-open-source-tools.html  automation-testing-tools.html  best-ai-testing-tools.html  best-test-automation-frameworks.html  download_1770627166.html  download_1770627167.html  download_1770630044.html  download_1770630045.html  download_1770630046.html  download_1770630929.html  download_1770630931.html  download_1770630984.html  download_1770630986.html  gartner-magic-quadrant-ai-augmented-software-testing-tools.html  how-qa-automation-is-evolving-trends-defining-2025-and-the-future.html  indeed.html  jse.2025.246843.html  playwright-vs-cypress-solving-real-test-automation-challenges-4e8m.html  qa-best-practices.html  quality-assurance-4-insights-you-should-know-for-2025.html  selenium-open-source-funding-and-community-driven-innovation-a-deep-dive-into-the-future-4dfb.html  selenium-testing-service-market-innovation-development-outlook-gcqjf.html  state-quality-2025.html  the-fastest-continuous-testing-platforms.html  top-10-qa-trends-of-2025.html  top-20-test-automation-tools.html
tests/: README.md  auth_integration.rs  cli_e2e.rs  critical.rs  download_engine_integration.rs  download_integration.rs  nonfunctional_regression_gates.rs  parser_integration.rs  queue_integration.rs  resolver_integration.rs
url_lists/: qa-automation-links.md  qa-automation-links.txt
(+201 files in other folders)
