[package]
name = "downloader"
version = "0.1.0"
edition = "2024"
authors = ["fierce"]
description = "Batch download and organize reference documents"
license = "MIT"

[lib]
name = "downloader_core"
path = "src/lib.rs"

[[bin]]
name = "downloader"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.13", features = ["json", "cookies", "stream", "gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "migrate"] }

# Streaming downloads - required for bytes_stream() on reqwest responses
futures-util = "0.3"

# URL parsing - required for filename extraction from URLs
url = "2"

# URL encoding/decoding - required for Content-Disposition filename parsing
urlencoding = "2"

# Regex - required for URL pattern extraction from text input
regex = "1"

# Random number generation - required for retry jitter
rand = "0.8"

# Thread-safe concurrent HashMap - required for per-domain rate limiting (Story 1.7)
dashmap = "5.5"

# RFC 7231 HTTP-date parsing - required for Retry-After header (Story 1.7)
httpdate = "1.0"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"
