[package]
name = "downloader-cli"
version = "0.1.0"
edition = "2024"
authors = ["fierce"]
description = "CLI for the downloader tool"
license = "MIT"

[[bin]]
name = "downloader"
path = "src/main.rs"

[[bin]]
name = "extract-md-links"
path = "src/bin/extract_md_links.rs"

[[bin]]
name = "stress-sidecar-flaky"
path = "src/bin/stress_sidecar_flaky.rs"

[dependencies]
downloader-core = { path = "../downloader-core" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"

# CLI
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (CLI uses reqwest::cookie::Jar directly)
reqwest = { version = "0.13", features = ["json", "cookies", "stream", "gzip"] }

# URL parsing (CLI uses url::Url directly)
url = "2"

# Regex (used in extract-md-links binary)
regex = "1"

# Fuzzy matching (CLI search module uses strsim directly)
strsim = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
wiremock = "0.6"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
downloader-core = { path = "../downloader-core" }
