[package]
name = "downloader-app"
version = "0.1.0"
description = "Tauri desktop app for Downloader"
authors = ["fierce"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "downloader_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri runtime
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# Core business logic
downloader-core = { path = "../../downloader-core" }

# Async runtime (Tauri drives the runtime; we use tokio for internal async in commands)
tokio = { version = "1", features = ["full"] }

# Serialization (for DownloadSummary sent to frontend)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Filesystem paths for home dir resolution
dirs = "5"

# Logging
tracing = "0.1"

[dev-dependencies]
# For #[tokio::test] in command unit tests
tokio = { version = "1", features = ["full"] }
tempfile = "3"

